# FactorioQualityOptimizer

./: .gitignore  README.md  flake.nix  pyproject.toml
backend/: flask_app.py
backend/templates/: index.html  macros.html  results.html
examples/: test_productivity_research.json
factorioqualityoptimizer/: main.py
scripts/: factorio_solver.py  flow_chart.py  linear_solver.py  utils.py
solver/: factorio_solver.py  flow_chart.py  linear_solver.py  test_examples.py
