[tool.poetry]
name = "factorioqualityoptimizer"
version = "0.1.0"
description = ""
authors = ["Scott Sullivan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
contourpy = "^1.3.0"
cycler = "^0.12.1"
fonttools = "^4.54.1"
importlib-resources = "^6.4.5"
kiwisolver = "^1.4.7"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
packaging = "^24.1"
pillow = "^11.0.0"
pyparsing = "^3.2.0"
python-dateutil = "^2.9.0.post0"
six = "^1.16.0"
zipp = "^3.20.2"

[tool.poetry.scripts]
factorioqualityoptimizer = "factorioqualityoptimizer.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
